# ATS-Precision-AI

./: LICENSE  README.md  __init__.py  config.py  pyproject.toml  requirements.txt  routes.py
app/: routes.py
app/services/: ai_service.py  pdf_service.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: index.html
services/: ai_service.py
static/css/: styles.css
static/js/: main.js
templates/: index.html
